# fezinator

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  rust-clippy.yml
scripts/: README.md  analyze-asm.py  annotate_asm_tests.py  extract_fex_tests.py  install-hooks.sh  qa.sh
src/: error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/cli/: analyze.rs  compare.rs  export.rs  extract.rs  import.rs  import_results.rs  list.rs  mod.rs  remove.rs  simulate.rs
src/db/: mod.rs  tests.rs
src/export/: mod.rs
src/extractor/: mod.rs  tests.rs
src/simulator/: assembly_generator.rs  compilation.rs  emulator.rs  execution.rs  mod.rs  random_generator.rs  state.rs  tests.rs
tests/: asm_tests.rs  integration_test.rs  simulation_test.rs
tests/asm/: complex_example.asm  conditional_jump.asm  fex_call.asm  fex_daztest.asm  fex_fadd.asm  fex_fld.asm  fex_full_pshufd_imm.asm  fex_full_vpblendw_imm.asm  fex_jmp.asm  fex_jump.asm  fex_lea.asm  fex_memorydata.asm  fex_mov.asm  fex_movhpd.asm  fex_movups.asm  fex_movzx.asm  fex_primary_pause.asm  fex_primary_primary_00.asm  fex_primary_primary_01_atomic16.asm  fex_primary_primary_01_atomic32.asm  fex_primary_primary_01_atomic64.asm  fex_primary_primary_08.asm  fex_primary_primary_09_atomic16.asm  fex_primary_primary_09_atomic32.asm  fex_primary_primary_09_atomic64.asm  fex_primary_primary_10.asm  (+457 more)
