[package]
name = "fezinator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
object = "0.36"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"