[package]
name = "fezinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fezinator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
object = { version = "0.37", features = ["pe"] }
sha2 = "0.10"
rusqlite = { version = "0.36", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
capstone = "0.12"

[dev-dependencies]
tempfile = "3.10"
capstone = "0.12"
